<resources>
    <string name="app_name">Shift App</string>
    <string name="MyMessage">The PFI\'s shift calculator</string>
    <string name="CheckDate">Check date</string>
    <string name="CheckShift">Check shift</string>
    <string name="TextHint1">Choose your shift today</string>
    <string name="TextHint2">Choose the date to see your shift</string>
    <string name="textMsg1">Your shift today is</string>
    <string name="textMsg2">The date you picked is</string>
    <string name="Evening">Evening</string>
    <string name="Morning">Morning</string>
    <string name="Night">Night</string>
    <string name="DayOff1">Day off 1</string>
    <string name="DayOff2">Day off 2</string>
    <string name="DaysOff5">5 Days off</string>
    <string name="AlertMsg">Pick your shift today</string>
    <string name="dtString">NoInput</string>
    <string name="resultEvening">Evening 14:00-22:00</string>
    <string name="resultDayOff1">Day off 1</string>
    <string name="resultMorning">Morning 06:00-14:00</string>
    <string name="resultDayOff2">Day off 2</string>
    <string name="resultNight">Night 22:00-06:00</string>
    <string name="result5DaysOff">5 Days off</string>
    <string name="outputText">Your shift on</string>
    <string name="isString">is:</string>
    <string name="Second_Activ_info_msg">Please define a complete shift cycle, based on your shift in current session</string>
    <string name="Second_Activ_alert_msg">Please fill all fields</string>
    <string name="Fragment_Choose_Shift_Text">1. Choose shift</string>
    <string-array name="spinnerShifts">
        <item>@string/Morning</item>
        <item>@string/Evening</item>
        <item>@string/Night</item>
        <item>@string/DayOff</item>
    </string-array>
    <string-array name="theMonths">
        <item>@string/Jan</item>
        <item>@string/Feb</item>
        <item>@string/Mar</item>
        <item>@string/Apr</item>
        <item>@string/May</item>
        <item>@string/Jun</item>
        <item>@string/Jul</item>
        <item>@string/Aug</item>
        <item>@string/Sep</item>
        <item>@string/Oct</item>
        <item>@string/Nov</item>
        <item>@string/Dec</item>
    </string-array>
    <string-array name="theDays">
        <item>@string/Mon</item>
        <item>@string/Tue</item>
        <item>@string/Wed</item>
        <item>@string/Thu</item>
        <item>@string/Fri</item>
        <item>@string/Sat</item>
        <item>@string/Sun</item>
    </string-array>
    <string name="DayOff">Day off</string>
    <string name="From">from</string>
    <string name="To">to</string>
    <string name="Fragment_Choose_Date_Text">2. Define dates</string>
    <string name="Fragment_Pick_Date">pick</string>
    <string name="Fragment_Add_Button">add</string>
    <string name="Fragment_Remove_Button">remove</string>
    <string name="Fragment_done_Button">done</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_calendar">Calendar</string>
    <string name="shared_preferences_file" translatable="false">com.example.dinob.pfishiftv1.LOCAL_DATA</string>
    <string name="settings_enable_PFI_shift">Enable predefined PFI shift</string>
    <string name="settings_new_cycle_text">Create new shift pattern</string>
    <string name="settings_create_cycle_button">create</string>
    <string name="settings_clear_data_text">Clear stored data</string>
    <string name="settings_clear_button">clear</string>
    <string name="data_saved">data saved</string>
    <string name="data_cleared">data cleared</string>
    <string name="alert_intro_msg">No saved settings found. Please go to settings to define your preferences</string>
    <string name="alert_intro_title">Set your shift</string>
    <string name="Jan">January</string>
    <string name="Feb">February</string>
    <string name="Mar">March</string>
    <string name="Apr">April</string>
    <string name="May">May</string>
    <string name="Jun">June</string>
    <string name="Jul">July</string>
    <string name="Aug">August</string>
    <string name="Sep">September</string>
    <string name="Oct">October</string>
    <string name="Nov">November</string>
    <string name="Dec">December</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="Second_activity_NoLinearity">The dates you chose are not continues</string>
    <string name="Fragment_add_to_shift">3. Add to shift</string>
    <string name="Fragment_repeat_msg">4. Repeat previous steps as many times as you need</string>
    <string name="Fragment_press_done_prompt">5. Press done when you complete a shift cycle</string>
    <string name="search_day">Search for a specific date</string>
    <string name="search_calendar">See calendar</string>
    <string name="data_loading">Loading data...</string>
    <string name="Help_menu">Help</string>

</resources>
