<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dinob.pfishiftv1.Settings">

    <RadioButton
        android:id="@+id/enablePFIButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/settings_enable_PFI_shift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createNewCycleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_new_cycle_text"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/newCycle"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/settings_create_cycle_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="216dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/clearDataText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_clear_data_text"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/clear"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="@string/settings_clear_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSettingsHint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/TextHint1"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enablePFIButton" />

        <Button
            android:id="@+id/checkShift"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/CheckShift" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
