<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/promptShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Fragment_Choose_Shift_Text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/setSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/promptShift"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/promptDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fragment_Choose_Date_Text"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/promptShift" />

    <TextView
        android:id="@+id/textFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/From"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/promptDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonDate1"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/Fragment_Pick_Date"
        app:layout_constraintLeft_toRightOf="@+id/textFrom"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/promptDate" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/To"
        app:layout_constraintLeft_toRightOf="@+id/buttonDate1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/promptDate" />

    <Button
        android:id="@+id/buttonDate2"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/Fragment_Pick_Date"
        app:layout_constraintLeft_toRightOf="@+id/textTo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/promptDate" />

    <TextView
        android:id="@+id/fragmentResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="?attr/actionMenuTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDate1" />
</android.support.constraint.ConstraintLayout>