<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/SecondActInfoMsg"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/Second_Activ_info_msg"
        android:layout_marginStart="8dp"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="14sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/promptShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Fragment_Choose_Shift_Text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pressDonePrompt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:text="@string/Fragment_press_done_prompt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPrompt" />

        <TextView
            android:id="@+id/repeatPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:text="@string/Fragment_repeat_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptButton" />

        <Spinner
            android:id="@+id/setSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@+id/promptShift"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/promptDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="38dp"
            android:text="@string/Fragment_Choose_Date_Text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptShift" />

        <TextView
            android:id="@+id/promptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:text="@string/Fragment_add_to_shift"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptDate" />

        <Button
            android:id="@+id/buttonDate1"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/Fragment_Pick_Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptShift" />

        <Button
            android:id="@+id/addFragmentButton"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="28dp"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:text="@string/Fragment_Add_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptDate" />

        <Button
            android:id="@+id/doneFragmentButton"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:drawableLeft="?android:attr/textCheckMarkInverse"
            android:text="@string/Fragment_done_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pressDonePrompt"
            app:layout_constraintTop_toBottomOf="@+id/repeatPrompt" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/myFrag1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag7"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag8"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag9"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/myFrag10"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>