<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/textOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="55dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/checkVardia"
                    android:layout_width="175dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:text="@string/CheckShift"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="119dp" />

                <TextView
                    android:id="@+id/textShift"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:text="@string/TextHint1"
                    android:textAlignment="center"
                    android:textColor="?attr/actionMenuTextColor"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="140dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/checkDate"
                    android:layout_width="175dp"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:text="@string/CheckDate"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="229dp" />

                <TextView
                    android:id="@+id/textDate"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:text="@string/TextHint2"
                    android:textAlignment="center"
                    android:textColor="?attr/actionMenuTextColor"
                    tools:layout_editor_absoluteX="191dp"
                    tools:layout_editor_absoluteY="254dp" />
        </LinearLayout>

</android.support.constraint.ConstraintLayout>
